--- a/css/header.css
+++ b/css/header.css
@@ -58,15 +58,15 @@ nav.nav ul:first-child {
 ul li ul {
     background: rgba(0, 0, 0, 0.85);
     visibility: hidden;
-    min-width: 5rem;
+  opacity: 0;
+  min-width: 5rem;
     position: absolute;
-    transition: all 0.5s ease;
+  transition: all 0.5s ease;
   
   display: none;
   border-radius: 0px 0px 5px 5px;
   padding-top: 8px;
   margin-left: -5px;
-
 }
 
 ul li:hover > ul,
@@ -87,10 +87,3 @@ ul li ul li {
     text-align: left;
 }
 
-.toggle{
-    text-align: right;
-    width: 100%;
-    padding: 5px 20px;
-    display: block;
-    background: #000;
-}
