--- a/css/projects.css
+++ b/css/projects.css
@@ -1,17 +1,17 @@
-.center table {
+#center table {
     border: 2px solid #fff;
 }
 
-.center table th {
+#center table th {
     border: 2px solid #fff;
 }
 
-.center table td{
+#center table td{
     text-align: center;
     border: 2px solid #e4e4e4;
 }
 
-.center table a {
+#center table a {
     text-decoration: none;
 }
 
