--- a/css/achievements.css
+++ b/css/achievements.css
@@ -1,9 +1,9 @@
-.Achievements ol{
+#Achievements ol{
     list-style: none; 
     counter-reset: li; 
     }
 
-.Achievements li:before {
+#Achievements li:before {
     counter-increment: li; 
     content: counters(li,".") ". "; 
     }
