--- a/css/media.css
+++ b/css/media.css
@@ -81,12 +81,12 @@
         display: block;
     }
 
-    .smallScreen {
-        display: none;
+    .center{
+        display: block;
     }
-
-    .year table th, td{
-        font-size: 8px;
+ 
+    .img-center{
+        width: 100%;
     }
 }
 
@@ -142,6 +142,14 @@
     .row{
         display: block;
     }
+
+   .center{
+       display: block;
+   }
+
+   .img-center{
+       width: 100%;
+   }
  }
 
 /* Small devices (tablets) */
