--- a/style.css
+++ b/style.css
@@ -76,10 +76,22 @@ body {
  */
 
 h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
+	font-size: 1.6em;
+	margin: 0 0;
+	text-align: center;
 }
 
+h2 {
+    font-size: 1.4em;
+}
+
+h3{
+	font-size: 1.2em;
+}
+
+h2,h3, h4{
+	font-weight: 400;
+}
 /* Grouping content
 	 ========================================================================== */
 
@@ -274,7 +286,6 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *		`fieldset` elements in all browsers.
  */
-
 
 legend {
 	box-sizing: border-box; /* 1 */
@@ -679,6 +690,42 @@ a:hover, a:active {
 	text-decoration: none;
 }
 
+/* Small menu. */
+.menu-toggle,
+.main-navigation.toggled ul {
+	display: block;
+}
+
+@media screen and (min-width: 37.5em) {
+	.menu-toggle {
+		display: none;
+	}
+	.main-navigation ul {
+		display: block;
+	}
+}
+
+.site-main .comment-navigation, .site-main
+.posts-navigation, .site-main
+.post-navigation {
+	margin: 0 0 1.5em;
+	overflow: hidden;
+}
+
+.comment-navigation .nav-previous,
+.posts-navigation .nav-previous,
+.post-navigation .nav-previous {
+	float: left;
+	width: 50%;
+}
+
+.comment-navigation .nav-next,
+.posts-navigation .nav-next,
+.post-navigation .nav-next {
+	float: right;
+	text-align: right;
+	width: 50%;
+}
 
 /*--------------------------------------------------------------
 # Accessibility
